# slach

./: .cproject  .project  CMakeLists.txt  CompileSlach.md  Dependencies  EclipseSetup.md  Makefile  ProjectHome.md
src/: ChessBoard.cpp  ChessBoard.hpp  ChessBoardWithBorders.cpp  ChessBoardWithBorders.hpp  EngineInterface.cpp  EngineInterface.hpp  Exception.cpp  Exception.hpp  FenHandler.cpp  FenHandler.hpp  Game.cpp  Game.hpp  HelperGlobalFunctions.cpp  HelperGlobalFunctions.hpp  LegalMoveChecker.cpp  LegalMoveChecker.hpp  Move.cpp  Move.hpp  PieceType.hpp  Position.cpp  Position.hpp  PseudoLegalMoveGenerator.cpp  PseudoLegalMoveGenerator.hpp  SlachTypes.hpp  Square.cpp  Square.hpp  UCIEngineInterface.cpp  UCIEngineInterface.hpp  UCIStringsManipulator.cpp  UCIStringsManipulator.hpp
src/GUI/: ActualBoardPanel.cpp  ActualBoardPanel.hpp  BottomPanel.cpp  slac.hpp  (+25 more)
test/: CMakeCache.txt  CMakeLists.txt  Makefile  TestChessBoard.hpp  TestChessBoardSpecialMoves.hpp  TestChessboard.hpp  TestChessboardWithBorders.hpp  TestEngineCommands.hpp  TestEngineInterface.hpp  TestEngineStrings.hpp  TestFenHandler.hpp  TestGame.hpp  TestHelperGlobalMethod.hpp  TestLegalMoveChecker.hpp  TestMove.hpp  TestPosition.hpp  TestPseudoLegalMoveGenerator.hpp  TestSquare.hpp  TestUCIEngineInterface.hpp  TestUCIStringsManipulator.hpp  cmake_install.cmake  test_runner.cpp
test/cxxtest/: TestSuite.h
test/data/pgn/: one_game_ok_black_win.pgn  one_game_ok_draw.pgn  one_game_ok_white_win.pgn  one_game_unmatched_brackets.pgn  one_game_wrong_move_13_black.pgn  one_game_wrong_move_letter_move_24.pgn
(+88 files in other folders)
